@@ -5,9 +5,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>cn.ningmo</groupId>
-  <artifactId>bellcommand</artifactId>
-  <version>1.3.1</version>
-  <packaging>jar</packaging>
+    <artifactId>bellcommand</artifactId>
+    <version>1.4.0-alpha-1</version>
+    <packaging>jar</packaging>
 
   <name>BellCommand</name>
   <description>A powerful command item plugin</description>
@@ -116,9 +116,6 @@
           <target>${java.version}</target>
           <release>${java.version}</release>
           <encoding>${project.build.sourceEncoding}</encoding>
-          <compilerArgs>
-            <arg>--enable-preview</arg>
-          </compilerArgs>
         </configuration>
       </plugin>
       <plugin>
